--- a/android/src/main/res/xml/widget_provider.xml
+++ b/android/src/main/res/xml/widget_provider.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/widget_layout"
+    android:initialLayout="@layout/widget_message"
     android:minWidth="250dp"
     android:minHeight="110dp"
     android:minResizeWidth="180dp"
