--- a/android/src/main/res/layout/widget_layout.xml
+++ b/android/src/main/res/layout/widget_layout.xml
@@ -9,49 +9,7 @@
     tools:layout_height="180dp"
     tools:layout_width="250dp">
 
-    <LinearLayout
-        android:id="@+id/ll_lines"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="12dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingTop="20dp">
-
-        <TextView
-            android:id="@+id/tv_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:lineSpacingExtra="3dp"
-            android:textColor="@color/widgetLineRed"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            tools:text="1" />
-
-        <ImageView
-            android:id="@+id/iv_lines"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            tools:background="@color/widgetLineRed" />
-
-        <TextView
-            android:id="@+id/tv_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:lineSpacingExtra="3dp"
-            android:textColor="@color/widgetLineRed"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            tools:text="3" />
-
-    </LinearLayout>
+    <include layout="@layout/widget_lines" />
 
     <TextView
         android:id="@+id/tv_text"
