--- a/android/src/main/res/layout/widget_message.xml
+++ b/android/src/main/res/layout/widget_message.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tv_message"
+    android:id="@+id/rl_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/widget_background"
-    android:gravity="center"
-    android:lineSpacingExtra="3dp"
     android:padding="12dp"
-    android:textColor="@color/widgetText"
-    android:textSize="17sp"
-    tools:text="@string/widget_login" />
+    tools:layout_height="180dp"
+    tools:layout_width="250dp">
+
+    <include layout="@layout/widget_lines" />
+
+    <TextView
+        android:id="@+id/tv_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ll_lines"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="4dp"
+        android:autoLink="web"
+        android:gravity="center_horizontal"
+        android:lineSpacingExtra="3dp"
+        android:textColor="@color/widgetText"
+        android:textColorLink="@color/widgetIcon"
+        android:textSize="17sp"
+        tools:text="Разработать дизайн приложения на iOS Todorant" />
+
+</RelativeLayout>
