--- a/android/src/main/res/layout/widget_message.xml
+++ b/android/src/main/res/layout/widget_message.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rl_layout"
+    android:id="@+id/rl_message"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/widget_background"
@@ -17,9 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_lines"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="4dp"
-        android:autoLink="web"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:lineSpacingExtra="3dp"
         android:textColor="@color/widgetText"
         android:textColorLink="@color/widgetIcon"
